# Prog_Lang

./: .gitignore  README.md
architecture/: build.ps1  file  out_local.ptptb  run_out.txt  run_out_new.txt  stack16.target.pdsl  test.asm
examples_v1/: 01_basic  02_break  03_calls  04_expr  05_do  06_nested  testv1
python/: ast_generator.py  builtin_funcs.py  builtins.txt  file_parser_to_graph.py  generate_asm.py  get_parse_tree.py  graph_parser.py  main.py  program_image.py  tree_parser.py  type_checker.py  types_generator.py
report/: Отчет_ЯП_2_Вариант1.docx  Отчет_ЯП_3_Вариант1.docx
tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter/src/: grammar.json  node-types.json  parser.c
