[package]
name = "tree-sitter-var2"
description = "Парсер для 2 варианта"
version = "0.1.0"
authors = ["Dafter"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "var2"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/daftert/parsing_grammar"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
